# opentelemetry-python

./: .flake8  .pylintrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docs-requirements.txt  genindex.html  objects.inv  opentelemetry.context.base_context.html  opentelemetry.metrics.html  opentelemetry.trace.html  opentelemetry.trace.status.html  opentelemetry.util.loader.html  py-modindex.html  pyproject.toml  searchindex.js  tox.ini
.changelog/: 0000.fixed  (+21 more)
exporter/opentelemetry-exporter-otlp-proto-http-lite/: pyproject.toml
exporter/opentelemetry-exporter-otlp-proto-http-lite/src/opentelemetry/exporter/otlp/proto/http/lite/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-common/: pyproject.toml
exporter/opentelemetry-exporter-otlp-pyproto-common/src/opentelemetry/exporter/otlp/pyproto/common/_internal/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-common/tests/: test_internal.py  test_log_encoder.py  test_metrics_encoder.py  test_trace_encoder.py
exporter/opentelemetry-exporter-otlp-pyproto-http/: pyproject.toml
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/proto/http/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/proto/http/_log_exporter/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/proto/http/metric_exporter/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/proto/http/trace_exporter/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/pyproto/http/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/pyproto/http/_common/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/src/opentelemetry/exporter/otlp/pyproto/http/_log_exporter/: __init__.py
exporter/opentelemetry-exporter-otlp-pyproto-http/tests/opentelemetry/exporter/otlp/pyproto/http/: test___init__.py
opentelemetry-pyproto/: AGENTS.md  CONVENTIONS.md  pyproject.toml
opentelemetry-pyproto/src/opentelemetry/pyproto/: _wire.py
opentelemetry-pyproto/src/opentelemetry/pyproto/_pyproto/: __init__.py  _enum.py  _scalars.py  _tag.py  _varint.py
opentelemetry-pyproto/src/opentelemetry/pyproto/_pyprotobuf/: fields.py
opentelemetry-pyproto/src/opentelemetry/pyproto/collector/logs/v1/: logs_service_pypb2.py  logs_service_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/collector/metrics/v1/: metrics_service_pypb2.py  metrics_service_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/collector/trace/v1/: trace_service_pypb2.py  trace_service_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/common/v1/: common_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/logs/v1/: logs_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/metrics/v1/: metrics_pypb2.py  metrics_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/resource/v1/: resource_pyproto2.py
opentelemetry-pyproto/src/opentelemetry/pyproto/trace/v1/: trace_pypb2.py  trace_pyproto2.py
opentelemetry-pyproto/tests/: test__enum.py  test__scalars.py  test__tag.py  test__varint.py  test_varint.py
opentelemetry-pyproto/tests/_pyprotobuf/: test_benchmark.py  test_enum.py  test_fields.py  test_scalars.py  test_tag.py  test_varint.py
opentelemetry-pyproto/tests/collector/logs/v1/: test_logs_service_pypb2.py
opentelemetry-pyproto/tests/collector/metrics/v1/: test_metrics_service_pypb2.py
opentelemetry-pyproto/tests/collector/trace/v1/: test_trace_service_pypb2.py
opentelemetry-pyproto/tests/common/v1/: test_common_pypb2.py
opentelemetry-pyproto/tests/logs/v1/: test_logs_pypb2.py
opentelemetry-pyproto/tests/metrics/v1/: test_metrics_pypb2.py
opentelemetry-pyproto/tests/resource/v1/: test_resource_pypb2.py
opentelemetry-pyproto/tests/trace/v1/: test_trace_pypb2.py
(+228 files in other folders)
