[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-otlp-proto-http-lite"
version = "1.43.0.dev"
description = "OpenTelemetry Collector Protobuf over HTTP Exporter (no google.protobuf dependency)"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: OpenTelemetry",
  "Framework :: OpenTelemetry :: Exporters",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.15",
  "opentelemetry-sdk ~= 1.43.0.dev",
  "requests ~= 2.7",
]

[project.entry-points.opentelemetry_traces_exporter]
otlp_proto_http_lite = "opentelemetry.exporter.otlp.proto.http.lite.trace_exporter:OTLPSpanExporter"

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
