[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-otlp-pyproto-common"
dynamic = ["version"]
description = "OpenTelemetry OTLP encoding using pure-Python protobuf (no google.protobuf)"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "opentelemetry-api ~= 1.43.0.dev",
  "opentelemetry-sdk ~= 1.43.0.dev",
  "opentelemetry-pyproto == 1.43.0.dev",
]

[tool.hatch.version]
path = "src/opentelemetry/exporter/otlp/pyproto/common/version/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
