[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-otlp-pyproto-http"
dynamic = ["version"]
description = "OpenTelemetry Collector pure-Python protobuf over HTTP Exporter (no google.protobuf)"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "opentelemetry-api ~= 1.43.0.dev",
  "opentelemetry-sdk ~= 1.43.0.dev",
  "opentelemetry-exporter-otlp-pyproto-common == 1.43.0.dev",
  "requests ~= 2.7",
]

[project.entry-points.opentelemetry_traces_exporter]
otlp_pyproto_http = "opentelemetry.exporter.otlp.pyproto.http.trace_exporter:OTLPSpanExporter"

[project.entry-points.opentelemetry_metrics_exporter]
otlp_pyproto_http = "opentelemetry.exporter.otlp.pyproto.http.metric_exporter:OTLPMetricExporter"

[project.entry-points.opentelemetry_logs_exporter]
otlp_pyproto_http = "opentelemetry.exporter.otlp.pyproto.http._log_exporter:OTLPLogExporter"

[tool.hatch.version]
path = "src/opentelemetry/exporter/otlp/pyproto/http/version/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
